...
      mass: 0.7,
    });
  };

  return (
    <AnimatedPressable
      testID="board-add"
      accessibilityLabel="보드 추가"
      accessibilityRole="button"
      className="absolute right-[25px] h-[54px] w-[54px] items-center justify-center rounded-[50px]"
      style={[
        styles.container,
        {
...
