...
import OnboardChatStepLayout from "./onboard-chat-step-layout";
import OnboardSelectList, {
  OnboardSelectListItem,
} from "./onboard-select-list";

const CHIPS = [
  { icon: "🥛", text: "아침에 물 한 잔" },
  { icon: "📖", text: "독서하기" },
  { icon: "🎸", text: "악기 연주하기" },
  { icon: "🪴", text: "화분 물주기" },
  { icon: "💼", text: "칼퇴하기" },
  { icon: "✍️", text: "직접 입력하기", value: null },
];
...
